--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "php-amqplib/php-amqplib": "^2.7"
+    },
+    "autoload": {
+        "psr-4": {
+            "tools\\": "lib/tools"
+        }
     }
 }
