--- a/docker/nginx/conf.d/web.conf
+++ b/docker/nginx/conf.d/web.conf
@@ -61,7 +61,7 @@ server {
         }
 
         fastcgi_param PATH_INFO       $fastcgi_path_info;
-        # fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
         # and set php.ini cgi.fix_pathinfo=0
 
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
